crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__fixture_replay_tests__styled_tool_call_with_body.snap
---
source: crates/crucible-cli/src/tui/oil/tests/fixture_replay_tests.rs
assertion_line: 280
expression: styled
---
[?25h[m[H[J[38;2;40;44;52m▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
[39;48;2;40;44;52m > Show me the file                                                             
[38;2;40;44;52;49m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀[5;1H[38;2;158;206;106m ✓ [37mBash cat src/main.rs
   │ fn main() {                                                                
   │     println!("Hello");                                                     
   │ }                                                                          [10;1H[m   The file contains a simple hello world program.[12;1H[38;2;60;64;72m▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
[39;48;2;60;64;72m >                                                                              
[38;2;60;64;72;49m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
[30;42;1m ASK [m [36m...[m                                                                 [90m— ctx[13;4H[m
